--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^15.0.1",
-    "remark-html": "^15.0.2"
+    "remark-html": "^15.0.2",
+    "sass": "^1.68.0"
   },
   "engines": {
     "node": ">=18"
